welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
		return
                ^SlugTracking:23: error: type mismatch;
 found   : Unit
 required: Boolean
	return 
        ^