welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var solVert:Boolean = false
	if(estFaceMur) {
		gauche()
		return
	}
	else {
		avance()
		getCouleurSol()
		if(getCouleurSol == Color.green) {
			solVert = true
		}
		recule()
		if(solVert == true) {
			()
		}
		
		else {
			gauche()
		}
	}
	return 
}